# pythonista_wkapp

./: LICENSE  README.md  WKApp.py  WKApp.pyui  WKWebView.py  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
docs/: README.md
static/: wkapp.js
test/views/: first_view.html  index.html  test_view.html  web_asm.html
test/views/base/: layout.html
views/: app.js  index.html  view.html
views/base/: app.css  app.html  layout.html  view.html
views/dynamic/: app.css  app.js
